[package]
name = "pidstat"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
common = { path = "../common" }
rustix = { workspace = true, features = ["param"] }
strict-num = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
